--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "ng": "ng",
     "start": "node ./node_modules/@angular/cli/bin/ng serve --proxy-config proxy.conf.json",
     "build": "node ./node_modules/@angular/cli/bin/ng build",
+    "http": "node ./node_modules/http-server/bin/http-server ./dist --proxy http://localhost:3000/ -p 4200",
     "json": "node ./node_modules/json-server/bin/index.js mocks/fakedata.json --watch",
-    "all": "node ./node_modules/concurrently/src/main.js \"npm start\" \"npm run json\""
+    "all": "node ./node_modules/concurrently/src/main.js \"npm run build && npm run http\" \"npm run json\""
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "@types/underscore": "^1.8.0",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
+    "http-server": "^0.9.0",
     "json-server": "^0.9.6",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
